fixed config for hbase-node